# codewars

./: pyproject.toml
best_travel/: main.py  readme.md  test_main.py
breaking_search_bad/: README.md  main.py  test_main.py
descending_order/: readme.md  test_main.py
fill_the_hard_disk/: main.py  test_main.py
josephus_permutation/: main.py  test_main.py
maskify/: main.py  readme.md  test_main.py
multiplication_table/: README.md  main.py  test_main.py
only-readable-once/: main.py  test_main.py
only_readable_once/: main.py  readme.md  test_main.py
