[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["Fabricio Coelho <vilelf.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
ipdb = "^0.13.2"
rope = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
